<resources>
    <string name="app_name">MediaPlayer</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Pause">Pause</string>
    <string name="Next">Next</string>
    <string name="Previous">Previous</string>
    <string name="EXIT">Exit</string>
    <string name="Leise">Leise</string>
    <string name="Laut">Laut</string>
    <string name="Leiser">Leiser</string>
    <string name="Lauter">Lauter</string>
    <string name="title_activity_second">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>